# mdthtml

./: .gitignore  Makefile  README.html  README.md  pyproject.toml
src/mdthtml/: __init__.py  cli.py  main.py
src/mdthtml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mdthtml/assets/: template.txt
src/mdthtml/plugins/: example.py  links.py
tests/: test_cli.py  test_meta.py  test_render.py
tests/files/: md_meta.md  md_simple.md  md_table.md  temp_meta.txt  temp_simple.txt
